// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e test mon-entreprise api > Test evaluate avocat (test units) 2`] = `
{
  "evaluate": [
    {
      "missingVariables": [
        "dirigeant . indépendant . IJSS",
        "dirigeant . indépendant . PL . CNBF . retraite complémentaire . classe",
        "dirigeant . indépendant . cotisations et contributions . exonérations . pension invalidité",
        "dirigeant . indépendant . cotisations facultatives . PER",
        "dirigeant . indépendant . cotisations facultatives . contrats madelin . prévoyance",
        "dirigeant . indépendant . cotisations facultatives . contrats madelin . retraite",
        "dirigeant . indépendant . revenus étrangers",
        "entreprise . charges",
        "entreprise . imposition",
        "entreprise . imposition . régime",
        "entreprise . imposition . régime . micro-entreprise",
        "impôt . foyer fiscal . enfants à charge",
        "impôt . foyer fiscal . revenu imposable . autres revenus imposables",
        "impôt . foyer fiscal . situation de famille",
        "impôt . méthode de calcul",
        "situation personnelle . domiciliation fiscale à l'étranger",
        "établissement . ZFU",
        "établissement . commune . département",
        "établissement . commune . département . outre-mer",
      ],
      "nodeValue": 2614.1747150715755,
      "unit": {
        "denominators": [
          "an",
        ],
        "numerators": [
          "€",
        ],
      },
    },
  ],
  "warnings": [
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature libérale réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature libérale réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature libérale réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité . entreprise activité nature libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité . entreprise activité nature libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité . entreprise activité nature libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
  ],
}
`;

exports[`e2e test mon-entreprise api > Test evaluate brut => net + super brut 2`] = `
{
  "evaluate": [
    {
      "missingVariables": [
        "dirigeant . indépendant",
        "entreprise . catégorie juridique",
        "entreprise . catégorie juridique . EI",
        "entreprise . catégorie juridique . EI . auto-entrepreneur",
        "entreprise . catégorie juridique . SARL",
        "entreprise . catégorie juridique . SAS",
        "entreprise . catégorie juridique . SELARL",
        "entreprise . catégorie juridique . SELAS",
        "salarié . activité partielle",
        "salarié . contrat",
        "salarié . contrat . statut cadre",
        "salarié . contrat . temps de travail . temps partiel",
        "salarié . convention collective",
        "salarié . cotisations . prévoyances . santé . montant",
        "salarié . cotisations . prévoyances . santé . taux employeur",
        "salarié . régimes spécifiques . DFS",
        "salarié . régimes spécifiques . alsace moselle",
        "salarié . régimes spécifiques . taux réduits",
        "salarié . rémunération . avantages en nature",
        "salarié . rémunération . frais professionnels . titres-restaurant",
        "salarié . rémunération . frais professionnels . trajets domicile travail . forfait mobilités durables . montant",
        "salarié . rémunération . frais professionnels . trajets domicile travail . prime de transport . montant",
        "salarié . rémunération . frais professionnels . trajets domicile travail . transports publics . montant",
        "salarié . rémunération . primes . activité . base",
        "salarié . rémunération . primes . fin d'année",
        "salarié . temps de travail . heures supplémentaires",
        "situation personnelle . domiciliation fiscale à l'étranger",
        "établissement . commune . département",
        "établissement . commune . département . outre-mer",
      ],
      "nodeValue": 2748.65125,
      "unit": {
        "denominators": [
          "mois",
        ],
        "numerators": [
          "€",
        ],
      },
    },
    {
      "missingVariables": [
        "dirigeant . indépendant",
        "entreprise . TVA",
        "entreprise . association non lucrative",
        "entreprise . catégorie juridique",
        "entreprise . catégorie juridique . EI",
        "entreprise . catégorie juridique . EI . auto-entrepreneur",
        "entreprise . catégorie juridique . SARL",
        "entreprise . catégorie juridique . SAS",
        "entreprise . catégorie juridique . SELARL",
        "entreprise . catégorie juridique . SELAS",
        "entreprise . salariés . effectif . seuil",
        "salarié . activité partielle",
        "salarié . contrat",
        "salarié . contrat . statut cadre",
        "salarié . contrat . temps de travail . temps partiel",
        "salarié . convention collective",
        "salarié . cotisations . ATMP . taux fonctions support",
        "salarié . cotisations . exonérations . JEI",
        "salarié . cotisations . exonérations . lodeom . zone deux",
        "salarié . cotisations . exonérations . lodeom . zone un",
        "salarié . cotisations . exonérations . réduction générale . caisse de congés payés",
        "salarié . cotisations . exonérations . zones lodeom",
        "salarié . cotisations . prévoyances . santé . montant",
        "salarié . cotisations . prévoyances . santé . taux employeur",
        "salarié . coût total employeur . aides . emploi franc",
        "salarié . régimes spécifiques . DFS",
        "salarié . régimes spécifiques . alsace moselle",
        "salarié . régimes spécifiques . taux réduits",
        "salarié . rémunération . avantages en nature",
        "salarié . rémunération . frais professionnels . titres-restaurant",
        "salarié . rémunération . frais professionnels . trajets domicile travail . forfait mobilités durables . montant",
        "salarié . rémunération . frais professionnels . trajets domicile travail . prime de transport . montant",
        "salarié . rémunération . frais professionnels . trajets domicile travail . transports publics . montant",
        "salarié . rémunération . primes . activité . base",
        "salarié . rémunération . primes . fin d'année",
        "salarié . temps de travail . heures supplémentaires",
        "établissement . commune . département",
        "établissement . commune . département . outre-mer",
        "établissement . taux ATMP",
        "établissement . taux ATMP . taux collectif",
      ],
      "nodeValue": 4745.21,
      "unit": {
        "denominators": [
          "mois",
        ],
        "numerators": [
          "€",
        ],
      },
    },
  ],
  "warnings": [
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"salarié . contrat . salaire brut\\"
⚠️  Dans l'expression '<', la partie gauche (unité: €) n'est pas compatible avec la partie droite (unité: €/mois)
ℹ️  
[ EngineError ]
✖️  Impossible de convertir l'unité '€/mois' en '€'",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"salarié . contrat . salaire brut\\"
⚠️  Erreur lors de la conversion d'unité explicite
ℹ️  
[ EngineError ]
✖️  Impossible de convertir l'unité '€' en '€/mois'",
    },
  ],
}
`;

exports[`e2e test mon-entreprise api > Test evaluate micro entreprise 2`] = `
{
  "evaluate": [
    {
      "missingVariables": [
        "entreprise . activités . revenus mixtes",
        "établissement . commune . département",
        "établissement . commune . département . outre-mer",
      ],
      "nodeValue": 10836,
      "unit": {
        "denominators": [
          "an",
        ],
        "numerators": [
          "€",
        ],
      },
    },
    {
      "missingVariables": [],
      "nodeValue": 0,
    },
    {
      "missingVariables": [
        "entreprise . activités . revenus mixtes",
        "établissement . commune . département",
        "établissement . commune . département . outre-mer",
      ],
      "nodeValue": 31164,
      "unit": {
        "denominators": [
          "an",
        ],
        "numerators": [
          "€",
        ],
      },
    },
  ],
  "warnings": [
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature libérale réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature libérale réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature libérale réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale . réglementée\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité . entreprise activité nature libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité . entreprise activité nature libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité . entreprise activité nature libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature . libérale\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . catégorie juridique . remplacements . profession libérale reglementée . entreprise activité nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"déclaration charge sociales . nature de l'activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité . nature\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"entreprise . activité\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"impôt . méthode de calcul\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"impôt . méthode de calcul\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
    {
      "message": "
[ Avertissement ]
➡️  Dans la règle \\"impôt\\"
⚠️  Cette règle est tagguée comme experimentale. 

Cela veut dire qu'elle peut être modifiée, renommée, ou supprimée sans qu'il n'y ait de changement de version majeure dans l'API.
",
    },
  ],
}
`;

exports[`e2e test mon-entreprise api > Test openapi.json endpoint 2`] = `
{
  "components": {
    "schemas": {
      "EvaluateBody": {
        "properties": {
          "expressions": {
            "$ref": "#/components/schemas/Expressions",
          },
          "situation": {
            "$ref": "#/components/schemas/Situation",
          },
        },
        "required": [
          "expressions",
        ],
        "type": "object",
      },
      "EvaluateResponse": {
        "description": "Schéma retourné par l'endpoint evaluate",
        "oneOf": [
          {
            "properties": {
              "evaluate": {
                "items": {
                  "anyOf": [
                    {
                      "properties": {
                        "missingVariables": {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                        "nodeValue": {
                          "type": "number",
                        },
                      },
                      "type": "object",
                    },
                  ],
                },
                "type": "array",
              },
              "warnings": {
                "items": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          {
            "properties": {
              "situationError": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "type": "object",
          },
          {
            "properties": {
              "error": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "warnings": {
                "items": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
        ],
      },
      "Expressions": {
        "description": "Une expression ou un tableau d'expressions Publicodes",
        "oneOf": [
          {
            "items": {
              "$ref": "#/components/schemas/PublicodesExpression",
            },
            "minItems": 1,
            "type": "array",
          },
          {
            "$ref": "#/components/schemas/PublicodesExpression",
          },
        ],
      },
      "InputValidationError": {
        "items": {
          "properties": {
            "dataPath": {
              "type": "string",
            },
            "keyword": {
              "type": "string",
            },
            "message": {
              "type": "string",
            },
            "params": {
              "additionalProperties": {
                "type": "string",
              },
              "type": "object",
            },
            "schemaPath": {
              "type": "string",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "PublicodesExpression": {
        "description": "Une expression Publicodes",
        "oneOf": [
          {
            "type": "number",
          },
          {
            "type": "string",
          },
          {
            "additionalProperties": {},
            "minProperties": 1,
            "type": "object",
          },
        ],
      },
      "Rule": {
        "properties": {
          "nodeKind": {
            "type": "string",
          },
          "rawNode": {
            "additionalProperties": {
              "type": "object",
            },
            "properties": {
              "question": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "replacements": {
            "items": {
              "type": "object",
            },
            "type": "array",
          },
          "suggestions": {
            "type": "object",
          },
          "title": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "Rules": {
        "additionalProperties": {
          "$ref": "#/components/schemas/Rule",
        },
        "type": "object",
      },
      "Situation": {
        "additionalProperties": {
          "$ref": "#/components/schemas/PublicodesExpression",
        },
        "description": "La situation avec laquelle l'expression ou les expressions seront évaluées",
        "type": "object",
      },
    },
  },
  "info": {
    "description": "Cet API expose les calculs des simulateurs de [mon-entreprise](https://mon-entreprise.urssaf.fr/).

**[📒 Voir la documentation](https://mon-entreprise.urssaf.fr/d%C3%A9veloppeur/api)**
",
    "title": "Mon-entreprise API",
    "version": "v1",
  },
  "openapi": "3.0.0",
  "paths": {
    "/evaluate": {
      "post": {
        "operationId": "evaluate",
        "requestBody": {
          "content": {
            "application/json": {
              "examples": {
                "Auto-entrepreneur": {
                  "value": {
                    "expressions": [
                      {
                        "unité": "€/an",
                        "valeur": "dirigeant . auto-entrepreneur . cotisations et contributions",
                      },
                      "dirigeant . rémunération . impôt",
                      "dirigeant . auto-entrepreneur . revenu net . après impôt",
                    ],
                    "situation": {
                      "dirigeant . auto-entrepreneur . chiffre d'affaires": "42000 €/an",
                      "dirigeant . auto-entrepreneur . impôt . versement libératoire": "non",
                      "entreprise . activité . nature": "'libérale'",
                      "entreprise . activité . nature . libérale . réglementée": "non",
                      "entreprise . catégorie juridique": "'EI'",
                      "entreprise . catégorie juridique . EI . auto-entrepreneur": "oui",
                      "impôt . méthode de calcul": "'taux neutre'",
                    },
                  },
                },
                "Salaire brut en net": {
                  "value": {
                    "expressions": [
                      "salarié . rémunération . net . à payer avant impôt",
                    ],
                    "situation": {
                      "salarié . contrat": "'CDI'",
                      "salarié . contrat . salaire brut": {
                        "unité": "€/mois",
                        "valeur": 4200,
                      },
                    },
                  },
                },
              },
              "schema": {
                "$ref": "#/components/schemas/EvaluateBody",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/EvaluateResponse",
                },
              },
            },
            "description": "La requête a réussi",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/InputValidationError",
                },
              },
            },
            "description": "Erreur de validation d'entrée",
          },
        },
        "summary": "Evalue une expression avec un situation donnée",
        "tags": [
          "publicodes-api",
        ],
      },
    },
    "/rules": {
      "get": {
        "operationId": "rules",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Rules",
                },
              },
            },
            "description": "La requête a réussi",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/InputValidationError",
                },
              },
            },
            "description": "Erreur de validation d'entrée",
          },
        },
        "summary": "Retourne toutes les règles",
        "tags": [
          "publicodes-api",
        ],
      },
    },
    "/rules/{rule}": {
      "get": {
        "operationId": "rules-rule",
        "parameters": [
          {
            "description": "Rule to get",
            "examples": {
              "Impot": {
                "value": "impôt . méthode de calcul",
              },
              "Salaire net": {
                "value": "salarié . rémunération . net . à payer avant impôt",
              },
            },
            "in": "path",
            "name": "rule",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "oneOf": [
                    {
                      "$ref": "#/components/schemas/Rule",
                    },
                    {
                      "properties": {
                        "error": {
                          "properties": {
                            "message": {
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                  ],
                },
              },
            },
            "description": "La requête a réussi",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/InputValidationError",
                },
              },
            },
            "description": "Erreur de validation d'entrée",
          },
        },
        "summary": "Retourne la règle demandée",
        "tags": [
          "publicodes-api",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "/api/v1/",
    },
  ],
}
`;
